--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-countdown-component": "^2.6.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-responsive-screen": "^1.3.0",
     "react-navigation": "^3.6.0",
