--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-countdown-component": "^2.6.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-responsive-screen": "^1.3.0",
+    "react-native-sound": "^0.11.0",
     "react-navigation": "^3.6.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
