--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,7 +127,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.precision"
+        applicationId "com.figrd"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
