--- a/ios/FIGRD.xcodeproj/xcshareddata/xcschemes/FIGRD.xcscheme
+++ b/ios/FIGRD.xcodeproj/xcshareddata/xcschemes/FIGRD.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Precision.app"
-               BlueprintName = "Precision"
-               ReferencedContainer = "container:Precision.xcodeproj">
+               BuildableName = "FIGRD.app"
+               BlueprintName = "FIGRD"
+               ReferencedContainer = "container:FIGRD.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "PrecisionTests.xctest"
-               BlueprintName = "PrecisionTests"
-               ReferencedContainer = "container:Precision.xcodeproj">
+               BuildableName = "FIGRDTests.xctest"
+               BlueprintName = "FIGRDTests"
+               ReferencedContainer = "container:FIGRD.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "PrecisionTests.xctest"
-               BlueprintName = "PrecisionTests"
-               ReferencedContainer = "container:Precision.xcodeproj">
+               BuildableName = "FIGRDTests.xctest"
+               BlueprintName = "FIGRDTests"
+               ReferencedContainer = "container:FIGRD.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Precision.app"
-            BlueprintName = "Precision"
-            ReferencedContainer = "container:Precision.xcodeproj">
+            BuildableName = "FIGRD.app"
+            BlueprintName = "FIGRD"
+            ReferencedContainer = "container:FIGRD.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Precision.app"
-            BlueprintName = "Precision"
-            ReferencedContainer = "container:Precision.xcodeproj">
+            BuildableName = "FIGRD.app"
+            BlueprintName = "FIGRD"
+            ReferencedContainer = "container:FIGRD.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Precision.app"
-            BlueprintName = "Precision"
-            ReferencedContainer = "container:Precision.xcodeproj">
+            BuildableName = "FIGRD.app"
+            BlueprintName = "FIGRD"
+            ReferencedContainer = "container:FIGRD.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
