--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
-target 'Precision' do
-  # Pods for Precision
+target 'FIGRD' do
+  # Pods for FIGRD
   pod 'React', :path => '../node_modules/react-native/'
   pod 'React-Core', :path => '../node_modules/react-native/React'
   pod 'React-DevSupport', :path => '../node_modules/react-native/React'
@@ -23,15 +23,15 @@ target 'Precision' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
-  target 'PrecisionTests' do
+  target 'FIGRDTests' do
     inherit! :search_paths
     # Pods for testing
   end
   use_native_modules!
 end
-target 'Precision-tvOS' do
-  # Pods for Precision-tvOS
-  target 'Precision-tvOSTests' do
+target 'FIGRD-tvOS' do
+  # Pods for FIGRD-tvOS
+  target 'FIGRD-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
