added launch screen for ios. missing Android

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,8 @@ target 'FIGRD' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'FIGRDTests' do
     inherit! :search_paths
     # Pods for testing
