--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.60.5",
     "react-native-countdown-component": "^2.6.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-haptic-feedback": "^1.11.0",
     "react-native-responsive-screen": "^1.3.0",
     "react-native-sound": "^0.11.0",
     "react-native-splash-screen": "^3.2.0",
